--- a/index.html
+++ b/index.html
@@ -87,20 +87,6 @@ body{
   margin-top:4px;
 }
 
-/* TYPING */
-.typing{display:flex;gap:6px}
-.dot{
-  width:8px;height:8px;border-radius:50%;
-  background:var(--u2);
-  animation:bounce 1.4s infinite;
-}
-.dot:nth-child(2){animation-delay:.2s}
-.dot:nth-child(3){animation-delay:.4s}
-@keyframes bounce{
-  0%,80%,100%{opacity:.4}
-  40%{opacity:1;transform:translateY(-6px)}
-}
-
 /* INPUT */
 .input{
   display:flex;
@@ -123,16 +109,13 @@ body{
   color:#fff;
 }
 
-/* NYLA MODEL */
+/* NYLA */
 #nyla{
   position:absolute;
   right:-10px;
   bottom:90px;
   width:260px;
   pointer-events:none;
-  z-index:2;
-  opacity:1;
-  transition:opacity .25s ease;
 }
 
 /* SETTINGS */
@@ -239,13 +222,12 @@ body{
     <div class="settings-btn" id="openSettings">⚙️</div>
   </div>
 
-  <div class="messages" id="messages"></div>
-
-  <img id="nyla" src="assets/nyla/idle.png" alt="Nyla">
+  <div class="messages"></div>
+  <img id="nyla" src="assets/nyla/idle.png">
 
   <div class="input">
-    <input id="input" placeholder="Message Nyla…">
-    <button id="send">➤</button>
+    <input placeholder="Message Nyla…">
+    <button>➤</button>
   </div>
 </div>
 
@@ -273,9 +255,9 @@ body{
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-// OAuth HASH FIX
+/* HASH CLEANUP */
 if (location.hash.includes("access_token")) {
-  history.replaceState(null, "", location.pathname);
+  history.replaceState(null,"",location.pathname);
 }
 
 const supabase = window.supabase.createClient(
@@ -283,19 +265,32 @@ const supabase = window.supabase.createClient(
   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpkZ3N2Z3VlYndmZWNubGJveGlxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDgyNjMsImV4cCI6MjA4MTI4NDI2M30.SqAzHVqbA5YTgkhpxhEFlBhbLBNumVi4_lnSLoBuKR0"
 );
 
-const API="https://nyla-api.onrender.com/nyla";
+let userId = "guest";
+const login = document.getElementById("login");
 
-let userId="guest";
-const login=document.getElementById("login");
+/* 🔥 AUTH FIX */
+supabase.auth.onAuthStateChange((event, session)=>{
+  if(session?.user){
+    userId = session.user.id;
+    login.style.display="none";
+    console.log("✅ Logged in", userId);
+  }else{
+    userId = "guest";
+    login.style.display="flex";
+    console.log("👤 Guest");
+  }
+});
 
+/* INITIAL SESSION CHECK */
 (async ()=>{
   const { data } = await supabase.auth.getSession();
-  if(data.session){
-    userId=data.session.user.id;
+  if(data.session?.user){
+    userId = data.session.user.id;
     login.style.display="none";
   }
 })();
 
+/* AUTH ACTIONS */
 async function google(){
   await supabase.auth.signInWithOAuth({
     provider:"google",
@@ -306,13 +301,12 @@ async function signIn(){
   await supabase.auth.signInWithPassword({ email:email.value,password:password.value });
 }
 function guest(){ login.style.display="none"; }
-
 async function logout(){
   await supabase.auth.signOut();
   location.reload();
 }
 
-// SETTINGS
+/* SETTINGS */
 openSettings.onclick=()=>{
   settings.classList.add("open");
   overlay.classList.add("open");
