--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   --u2:#a78bfa;
   --text:#e4e4e7;
 }
-
 *{margin:0;padding:0;box-sizing:border-box}
 body{
   background:var(--bg);
@@ -24,7 +23,6 @@ body{
   min-height:100svh;
   font-family:system-ui,sans-serif;
 }
-
 .app{
   max-width:720px;
   margin:0 auto;
@@ -37,8 +35,6 @@ body{
   position:relative;
   overflow:hidden;
 }
-
-/* HEADER */
 .header{
   padding:1rem;
   background:var(--header);
@@ -56,38 +52,11 @@ body{
 }
 .status{font-size:.75rem;color:var(--u2)}
 .settings-btn{font-size:1.3rem;cursor:pointer}
-
-/* CHAT */
 .messages{
   flex:1;
   overflow-y:auto;
   padding:1rem;
-  display:flex;
-  flex-direction:column;
-  gap:.75rem;
 }
-.msg{
-  max-width:75%;
-  padding:.75rem 1rem;
-  border-radius:16px;
-}
-.user{
-  align-self:flex-end;
-  background:linear-gradient(135deg,var(--u1),var(--u2));
-  color:#fff;
-}
-.nyla{
-  align-self:flex-start;
-  background:var(--bubble);
-}
-.emotion{
-  font-size:.7rem;
-  opacity:.7;
-  color:var(--u2);
-  margin-top:4px;
-}
-
-/* INPUT */
 .input{
   display:flex;
   gap:.5rem;
@@ -108,8 +77,6 @@ body{
   background:linear-gradient(135deg,var(--u1),var(--u2));
   color:#fff;
 }
-
-/* NYLA */
 #nyla{
   position:absolute;
   right:-10px;
@@ -117,8 +84,6 @@ body{
   width:260px;
   pointer-events:none;
 }
-
-/* SETTINGS */
 .settings-overlay{
   position:fixed;
   inset:0;
@@ -145,7 +110,6 @@ body{
   z-index:10;
 }
 .settings.open{ right:0 }
-
 .settings a,
 .settings button{
   display:block;
@@ -159,7 +123,6 @@ body{
   text-decoration:none;
   cursor:pointer;
 }
-
 .settings-footer{
   position:absolute;
   bottom:1rem;
@@ -169,13 +132,11 @@ body{
   opacity:.6;
   text-align:center;
 }
-
-/* LOGIN */
 .login{
   position:fixed;
   inset:0;
   background:rgba(0,0,0,.65);
-  display:flex;
+  display:none;
   align-items:center;
   justify-content:center;
   z-index:20;
@@ -196,14 +157,8 @@ body{
   border:none;
   border-radius:8px;
 }
-.login-box input{
-  background:var(--bubble);
-  color:var(--text);
-}
-.login-box button{
-  background:linear-gradient(135deg,var(--u1),var(--u2));
-  color:#fff;
-}
+.login-box input{background:var(--bubble);color:var(--text)}
+.login-box button{background:linear-gradient(135deg,var(--u1),var(--u2));color:#fff}
 .login-box .alt{background:var(--bubble)}
 </style>
 </head>
@@ -255,39 +210,36 @@ body{
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-/* HASH CLEANUP */
-if (location.hash.includes("access_token")) {
-  history.replaceState(null,"",location.pathname);
-}
-
 const supabase = window.supabase.createClient(
   "https://zdgsvguebwfecnlboxiq.supabase.co",
   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpkZ3N2Z3VlYndmZWNubGJveGlxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDgyNjMsImV4cCI6MjA4MTI4NDI2M30.SqAzHVqbA5YTgkhpxhEFlBhbLBNumVi4_lnSLoBuKR0"
 );
 
-let userId = "guest";
 const login = document.getElementById("login");
+let userId = "guest";
 
-/* 🔥 AUTH FIX */
-supabase.auth.onAuthStateChange((event, session)=>{
+/* 🔑 SINGLE AUTH CONTROLLER */
+function applySession(session){
   if(session?.user){
     userId = session.user.id;
-    login.style.display="none";
-    console.log("✅ Logged in", userId);
-  }else{
+    login.style.display = "none";
+    console.log("✅ Authenticated:", userId);
+  } else {
     userId = "guest";
-    login.style.display="flex";
-    console.log("👤 Guest");
+    login.style.display = "flex";
+    console.log("👤 Guest mode");
   }
+}
+
+/* LISTEN FIRST */
+supabase.auth.onAuthStateChange((_event, session)=>{
+  applySession(session);
 });
 
-/* INITIAL SESSION CHECK */
+/* THEN CHECK */
 (async ()=>{
   const { data } = await supabase.auth.getSession();
-  if(data.session?.user){
-    userId = data.session.user.id;
-    login.style.display="none";
-  }
+  applySession(data.session);
 })();
 
 /* AUTH ACTIONS */
@@ -298,9 +250,14 @@ async function google(){
   });
 }
 async function signIn(){
-  await supabase.auth.signInWithPassword({ email:email.value,password:password.value });
+  await supabase.auth.signInWithPassword({
+    email: email.value,
+    password: password.value
+  });
 }
-function guest(){ login.style.display="none"; }
+function guest(){
+  login.style.display="none";
+}
 async function logout(){
   await supabase.auth.signOut();
   location.reload();
