--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   --u2:#a78bfa;
   --text:#e4e4e7;
 }
+
 *{margin:0;padding:0;box-sizing:border-box}
 body{
   background:var(--bg);
@@ -23,6 +24,7 @@ body{
   min-height:100svh;
   font-family:system-ui,sans-serif;
 }
+
 .app{
   max-width:720px;
   margin:0 auto;
@@ -35,6 +37,8 @@ body{
   position:relative;
   overflow:hidden;
 }
+
+/* HEADER */
 .header{
   padding:1rem;
   background:var(--header);
@@ -52,11 +56,15 @@ body{
 }
 .status{font-size:.75rem;color:var(--u2)}
 .settings-btn{font-size:1.3rem;cursor:pointer}
+
+/* CHAT */
 .messages{
   flex:1;
   overflow-y:auto;
   padding:1rem;
 }
+
+/* INPUT */
 .input{
   display:flex;
   gap:.5rem;
@@ -77,6 +85,8 @@ body{
   background:linear-gradient(135deg,var(--u1),var(--u2));
   color:#fff;
 }
+
+/* NYLA MODEL */
 #nyla{
   position:absolute;
   right:-10px;
@@ -84,6 +94,8 @@ body{
   width:260px;
   pointer-events:none;
 }
+
+/* SETTINGS OVERLAY */
 .settings-overlay{
   position:fixed;
   inset:0;
@@ -97,6 +109,8 @@ body{
   opacity:1;
   pointer-events:auto;
 }
+
+/* SETTINGS PANEL */
 .settings{
   position:fixed;
   top:0;
@@ -110,6 +124,20 @@ body{
   z-index:10;
 }
 .settings.open{ right:0 }
+
+.settings h3{
+  margin-bottom:1rem;
+  color:var(--u2);
+}
+
+.settings details{
+  margin-bottom:1rem;
+}
+.settings summary{
+  cursor:pointer;
+  margin-bottom:.5rem;
+}
+
 .settings a,
 .settings button{
   display:block;
@@ -123,6 +151,7 @@ body{
   text-decoration:none;
   cursor:pointer;
 }
+
 .settings-footer{
   position:absolute;
   bottom:1rem;
@@ -132,6 +161,8 @@ body{
   opacity:.6;
   text-align:center;
 }
+
+/* LOGIN */
 .login{
   position:fixed;
   inset:0;
@@ -157,8 +188,14 @@ body{
   border:none;
   border-radius:8px;
 }
-.login-box input{background:var(--bubble);color:var(--text)}
-.login-box button{background:linear-gradient(135deg,var(--u1),var(--u2));color:#fff}
+.login-box input{
+  background:var(--bubble);
+  color:var(--text);
+}
+.login-box button{
+  background:linear-gradient(135deg,var(--u1),var(--u2));
+  color:#fff;
+}
 .login-box .alt{background:var(--bubble)}
 </style>
 </head>
@@ -178,7 +215,8 @@ body{
   </div>
 
   <div class="messages"></div>
-  <img id="nyla" src="assets/nyla/idle.png">
+
+  <img id="nyla" src="assets/nyla/idle.png" alt="Nyla">
 
   <div class="input">
     <input placeholder="Message Nyla…">
@@ -186,18 +224,31 @@ body{
   </div>
 </div>
 
+<!-- SETTINGS -->
 <div class="settings-overlay" id="overlay"></div>
 <div class="settings" id="settings">
-  <a href="https://www.instagram.com/blub_fish.stacis?igsh=bmY1bnh6dGJxYnYx" target="_blank">Instagram</a>
-  <a href="https://discord.gg/2WMhbdX4" target="_blank">Discord</a>
-  <a href="https://www.facebook.com/share/17jwNsoEfz/" target="_blank">Facebook</a>
+  <h3>Settings</h3>
+
+  <details>
+    <summary>Developer Contacts</summary>
+    <a href="https://www.instagram.com/blub_fish.stacis?igsh=bmY1bnh6dGJxYnYx" target="_blank">Instagram</a>
+    <a href="https://discord.gg/2WMhbdX4" target="_blank">Discord</a>
+    <a href="https://www.facebook.com/share/17jwNsoEfz/" target="_blank">Facebook</a>
+  </details>
+
+  <button onclick="deleteMemory()" style="color:#f87171">
+    Delete Memory
+  </button>
+
   <button onclick="logout()">Logout</button>
+
   <div class="settings-footer">
     Nyla AI • Powered by Groq<br>
     Made by <b>Stacis Studios</b>
   </div>
 </div>
 
+<!-- LOGIN -->
 <div class="login" id="login">
   <div class="login-box">
     <input id="email" placeholder="Email">
@@ -218,25 +269,19 @@ const supabase = window.supabase.createClient(
 const login = document.getElementById("login");
 let userId = "guest";
 
-/* 🔑 SINGLE AUTH CONTROLLER */
+/* 🔑 AUTH CONTROLLER */
 function applySession(session){
   if(session?.user){
     userId = session.user.id;
     login.style.display = "none";
-    console.log("✅ Authenticated:", userId);
   } else {
     userId = "guest";
     login.style.display = "flex";
-    console.log("👤 Guest mode");
   }
 }
 
-/* LISTEN FIRST */
-supabase.auth.onAuthStateChange((_event, session)=>{
-  applySession(session);
-});
+supabase.auth.onAuthStateChange((_e, session)=>applySession(session));
 
-/* THEN CHECK */
 (async ()=>{
   const { data } = await supabase.auth.getSession();
   applySession(data.session);
@@ -255,9 +300,7 @@ async function signIn(){
     password: password.value
   });
 }
-function guest(){
-  login.style.display="none";
-}
+function guest(){ login.style.display="none"; }
 async function logout(){
   await supabase.auth.signOut();
   location.reload();
@@ -272,6 +315,20 @@ overlay.onclick=()=>{
   settings.classList.remove("open");
   overlay.classList.remove("open");
 };
+
+/* DELETE MEMORY */
+async function deleteMemory(){
+  try{
+    await fetch("https://nyla-api.onrender.com/forget-all",{
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body:JSON.stringify({ userId })
+    });
+    alert("Memory cleared 💭");
+  }catch{
+    alert("Couldn’t clear memory rn 😭");
+  }
+}
 </script>
 
 </body>
