--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   --u2:#a78bfa;
   --text:#e4e4e7;
 }
-
 *{margin:0;padding:0;box-sizing:border-box}
 body{
   background:var(--bg);
@@ -24,7 +23,6 @@ body{
   min-height:100svh;
   font-family:system-ui,sans-serif;
 }
-
 .app{
   max-width:720px;
   margin:0 auto;
@@ -35,10 +33,7 @@ body{
   border-left:1px solid var(--border);
   border-right:1px solid var(--border);
   position:relative;
-  overflow:hidden;
 }
-
-/* HEADER */
 .header{
   padding:1rem;
   background:var(--header);
@@ -54,29 +49,39 @@ body{
   display:flex;align-items:center;justify-content:center;
   font-weight:700;color:#fff;
 }
-.status{font-size:.75rem;color:var(--u2)}
-.settings-btn{font-size:1.3rem;cursor:pointer}
-
-/* CHAT */
+.settings-btn{cursor:pointer}
 .messages{
   flex:1;
   overflow-y:auto;
   padding:1rem;
+  display:flex;
+  flex-direction:column;
+  gap:.75rem;
 }
-
-/* INPUT */
+.msg{
+  max-width:75%;
+  padding:.75rem 1rem;
+  border-radius:16px;
+}
+.user{
+  align-self:flex-end;
+  background:linear-gradient(135deg,var(--u1),var(--u2));
+  color:#fff;
+}
+.nyla{
+  align-self:flex-start;
+  background:var(--bubble);
+}
 .input{
   display:flex;
   gap:.5rem;
   padding:1rem;
   background:var(--header);
-  border-top:1px solid var(--border);
 }
 .input input{
   flex:1;
   background:none;
   border:none;
-  outline:none;
   color:var(--text);
 }
 .input button{
@@ -85,17 +90,6 @@ body{
   background:linear-gradient(135deg,var(--u1),var(--u2));
   color:#fff;
 }
-
-/* NYLA MODEL */
-#nyla{
-  position:absolute;
-  right:-10px;
-  bottom:90px;
-  width:260px;
-  pointer-events:none;
-}
-
-/* SETTINGS OVERLAY */
 .settings-overlay{
   position:fixed;
   inset:0;
@@ -103,100 +97,52 @@ body{
   opacity:0;
   pointer-events:none;
   transition:.3s;
-  z-index:9;
 }
 .settings-overlay.open{
   opacity:1;
   pointer-events:auto;
 }
-
-/* SETTINGS PANEL */
 .settings{
   position:fixed;
-  top:0;
   right:-280px;
+  top:0;
   width:280px;
   height:100%;
   background:#14141d;
-  border-left:1px solid var(--border);
   padding:1rem;
-  transition:right .3s ease;
-  z-index:10;
+  transition:.3s;
 }
 .settings.open{ right:0 }
-
-.settings h3{
-  margin-bottom:1rem;
-  color:var(--u2);
-}
-
-.settings details{
-  margin-bottom:1rem;
-}
-.settings summary{
-  cursor:pointer;
-  margin-bottom:.5rem;
-}
-
-.settings a,
-.settings button{
-  display:block;
+.settings button, .settings a{
   width:100%;
   margin-bottom:.5rem;
   padding:.6rem;
   background:var(--bubble);
-  color:var(--text);
   border:none;
+  color:var(--text);
   border-radius:8px;
   text-decoration:none;
   cursor:pointer;
 }
-
-.settings-footer{
-  position:absolute;
-  bottom:1rem;
-  left:1rem;
-  right:1rem;
-  font-size:.75rem;
-  opacity:.6;
-  text-align:center;
-}
-
-/* LOGIN */
 .login{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,.65);
+  background:rgba(0,0,0,.6);
   display:none;
-  align-items:center;
   justify-content:center;
-  z-index:20;
+  align-items:center;
 }
 .login-box{
   background:var(--panel);
-  border:1px solid var(--border);
   padding:1.5rem;
   border-radius:16px;
-  width:90%;
-  max-width:340px;
+  width:300px;
 }
-.login-box input,
-.login-box button{
+.login-box input, .login-box button{
   width:100%;
   padding:.6rem;
-  margin-bottom:.6rem;
-  border:none;
-  border-radius:8px;
+  margin-bottom:.5rem;
 }
-.login-box input{
-  background:var(--bubble);
-  color:var(--text);
-}
-.login-box button{
-  background:linear-gradient(135deg,var(--u1),var(--u2));
-  color:#fff;
-}
-.login-box .alt{background:var(--bubble)}
 </style>
 </head>
 
@@ -206,56 +152,37 @@ body{
   <div class="header">
     <div class="header-left">
       <div class="avatar">N</div>
-      <div>
-        <div>Nyla</div>
-        <div class="status">online</div>
-      </div>
+      <div>Nyla</div>
     </div>
     <div class="settings-btn" id="openSettings">⚙️</div>
   </div>
 
-  <div class="messages"></div>
-
-  <img id="nyla" src="assets/nyla/idle.png" alt="Nyla">
+  <div class="messages" id="messages"></div>
 
   <div class="input">
-    <input placeholder="Message Nyla…">
-    <button>➤</button>
+    <input id="input" placeholder="Message Nyla…">
+    <button id="send">➤</button>
   </div>
 </div>
 
-<!-- SETTINGS -->
 <div class="settings-overlay" id="overlay"></div>
 <div class="settings" id="settings">
-  <h3>Settings</h3>
+  <a href="https://www.instagram.com/blub_fish.stacis?igsh=bmY1bnh6dGJxYnYx" target="_blank">Instagram</a>
+  <a href="https://discord.gg/2WMhbdX4" target="_blank">Discord</a>
+  <a href="https://www.facebook.com/share/17jwNsoEfz/" target="_blank">Facebook</a>
 
-  <details>
-    <summary>Developer Contacts</summary>
-    <a href="https://www.instagram.com/blub_fish.stacis?igsh=bmY1bnh6dGJxYnYx" target="_blank">Instagram</a>
-    <a href="https://discord.gg/2WMhbdX4" target="_blank">Discord</a>
-    <a href="https://www.facebook.com/share/17jwNsoEfz/" target="_blank">Facebook</a>
-  </details>
-
-  <button onclick="deleteMemory()" style="color:#f87171">
-    Delete Memory
-  </button>
-
+  <button onclick="clearChat()" style="color:#fbbf24">Clear Chat</button>
+  <button onclick="deleteMemory()" style="color:#f87171">Delete Memory</button>
   <button onclick="logout()">Logout</button>
-
-  <div class="settings-footer">
-    Nyla AI • Powered by Groq<br>
-    Made by <b>Stacis Studios</b>
-  </div>
 </div>
 
-<!-- LOGIN -->
 <div class="login" id="login">
   <div class="login-box">
     <input id="email" placeholder="Email">
-    <input id="password" type="password" placeholder="Password">
+    <input id="password" type="password">
     <button onclick="signIn()">Sign In</button>
-    <button class="alt" onclick="google()">Continue with Google</button>
-    <button class="alt" onclick="guest()">Guest</button>
+    <button onclick="google()">Google</button>
+    <button onclick="guest()">Guest</button>
   </div>
 </div>
 
@@ -266,41 +193,114 @@ const supabase = window.supabase.createClient(
   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpkZ3N2Z3VlYndmZWNubGJveGlxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDgyNjMsImV4cCI6MjA4MTI4NDI2M30.SqAzHVqbA5YTgkhpxhEFlBhbLBNumVi4_lnSLoBuKR0"
 );
 
-const login = document.getElementById("login");
-let userId = "guest";
+const API="https://nyla-api.onrender.com/nyla";
+const msgs=document.getElementById("messages");
+const input=document.getElementById("input");
+const login=document.getElementById("login");
 
-/* 🔑 AUTH CONTROLLER */
+let userId="guest";
+
+/* AUTH */
 function applySession(session){
   if(session?.user){
-    userId = session.user.id;
-    login.style.display = "none";
-  } else {
-    userId = "guest";
-    login.style.display = "flex";
+    userId=session.user.id;
+    login.style.display="none";
+    loadChats();
+  }else{
+    userId="guest";
+    login.style.display="flex";
   }
 }
+supabase.auth.onAuthStateChange((_e,s)=>applySession(s));
+supabase.auth.getSession().then(r=>applySession(r.data.session));
 
-supabase.auth.onAuthStateChange((_e, session)=>applySession(session));
+/* CHAT */
+function render(text,sender){
+  const m=document.createElement("div");
+  m.className="msg "+sender;
+  m.textContent=text;
+  msgs.appendChild(m);
+  msgs.scrollTop=msgs.scrollHeight;
+}
 
-(async ()=>{
-  const { data } = await supabase.auth.getSession();
-  applySession(data.session);
-})();
+async function loadChats(){
+  msgs.innerHTML="";
+  if(userId==="guest") return;
 
-/* AUTH ACTIONS */
+  const { data } = await supabase
+    .from("nyla_messages")
+    .select("*")
+    .eq("user_id",userId)
+    .order("created_at",{ascending:true});
+
+  data?.forEach(m=>render(m.text,m.sender));
+}
+
+send.onclick=async ()=>{
+  const text=input.value.trim();
+  if(!text) return;
+  input.value="";
+  render(text,"user");
+
+  if(userId!=="guest"){
+    await supabase.from("nyla_messages").insert({
+      user_id:userId,
+      sender:"user",
+      text
+    });
+  }
+
+  const r=await fetch(API,{
+    method:"POST",
+    headers:{ "Content-Type":"application/json" },
+    body:JSON.stringify({ message:text,userId })
+  });
+  const d=await r.json();
+  render(d.reply,"nyla");
+
+  if(userId!=="guest"){
+    await supabase.from("nyla_messages").insert({
+      user_id:userId,
+      sender:"nyla",
+      text:d.reply
+    });
+  }
+};
+
+/* ACTIONS */
+async function clearChat(){
+  if(userId==="guest"){
+    msgs.innerHTML="";
+    return;
+  }
+  await supabase.from("nyla_messages").delete().eq("user_id",userId);
+  msgs.innerHTML="";
+}
+
+async function deleteMemory(){
+  await fetch(API+"/forget-all",{
+    method:"POST",
+    headers:{ "Content-Type":"application/json" },
+    body:JSON.stringify({ userId })
+  });
+  alert("Memory cleared 💭");
+}
+
+async function signIn(){
+  await supabase.auth.signInWithPassword({
+    email:email.value,
+    password:password.value
+  });
+}
 async function google(){
   await supabase.auth.signInWithOAuth({
     provider:"google",
-    options:{ redirectTo:"https://stacis-gamer.github.io/App-nyla/" }
+    options:{ redirectTo:location.href }
   });
 }
-async function signIn(){
-  await supabase.auth.signInWithPassword({
-    email: email.value,
-    password: password.value
-  });
+function guest(){
+  login.style.display="none";
 }
-function guest(){ login.style.display="none"; }
 async function logout(){
   await supabase.auth.signOut();
   location.reload();
@@ -315,20 +315,6 @@ overlay.onclick=()=>{
   settings.classList.remove("open");
   overlay.classList.remove("open");
 };
-
-/* DELETE MEMORY */
-async function deleteMemory(){
-  try{
-    await fetch("https://nyla-api.onrender.com/forget-all",{
-      method:"POST",
-      headers:{ "Content-Type":"application/json" },
-      body:JSON.stringify({ userId })
-    });
-    alert("Memory cleared 💭");
-  }catch{
-    alert("Couldn’t clear memory rn 😭");
-  }
-}
 </script>
 
 </body>
